--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
-    "sass": "^1.86.3"
+    "sass": "^1.86.3",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -32,5 +33,8 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "vite": "^6.3.1"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
